fix text align with vision elements

--- a/socialschools_site/static/css/body.less
+++ b/socialschools_site/static/css/body.less
@@ -68,6 +68,7 @@
     }
   }
   .vision-block {
+    text-align: center;
     a {
       font-weight: bold;
     }
